# s3-wrapper

./: .gitignore  Cargo.toml  Dockerfile
.devcontainer/: devcontainer.json
s3/: Cargo.toml
s3-api/: Cargo.toml
s3-api/src/: error.rs  lib.rs
s3-api/src/bucket/: create.rs  delete.rs  list.rs  mod.rs
s3-api/src/xml/: bucket.rs  mod.rs
s3-derive/: Cargo.toml
s3-derive/src/: error.rs  lib.rs
s3-entities/: Cargo.toml
s3-entities/src/: bucket.rs  lib.rs  storage_provider.rs
s3-entities/src/test/: mod.rs  storage_provider.rs
s3/src/: lib.rs  storage_provider.rs
s3/src/bucket/: create.rs  delete.rs  mod.rs
src/: main.rs
vfs-storage/: Cargo.toml
vfs-storage/src/: lib.rs  vfs_provider.rs
vfs-storage/src/db/: bucket.rs  connection.rs  mod.rs  object.rs
vfs-storage/src/db/entity/: bucket.rs  mod.rs  object.rs
vfs-storage/src/db/func/: instr.rs  mod.rs  substr.rs
vfs-storage/src/db/migrator/: m20230730_000001_create_objects_table.rs  m20230730_000002_create_bucket_table.rs  mod.rs
