[package]
name = "s3-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "s3-api", "s3-derive", "s3-entities", "vfs-storage"]

[dependencies]
s3-api = { path = "s3-api" }
s3-entities = { path = "s3-entities" }
